<resources>
    <string name="app_name">Well-o-Meter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="developer_suraj_kumar_modi">Developer : Suraj Kumar Modi</string>
    <string name="wellness_meter">WELLNESS METER</string>
    <string name="register">REGISTER</string>
    <string-array name="Activitylist">
        <item>Every Day</item>
        <item>Seldom</item>
        <item>Rare</item>
        <item>No Activity</item>
    </string-array>
    <string name="title_activity_input">InputActivity</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="made_with_love_by_the_iip_team">Made with love by the IIP Team</string>
    <string name="email">Email</string>
    <string name="Register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="register_user">Register</string>
    <string name="age">Age</string>
    <string name="health_index_calculator">HEALTH INDEX CALCULATOR</string>
    <string name="title_activity_termsandcondtions">termsandcondtions</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="largeText">Privacy is one of the important aspect of an individual. In today\'s world, rapid advancements in technology have also lead to lot of discrepancy of data and its misuse has become quite frequent nowadays.\nWe pledge to prevent the misuse of you data in any form, your data is in safe hands.\nI thereby declare that all the data inputted by me in the app is true to my ability, I would be responsible for the actions that I pertake after results, Wellness Meter team would not held guilty under any law.\nI also declare that : \n1. lkjasdflkjasdflkjasdflkjasdflkjsdflkjasdflkjasdflkjsadflkjasdflkjasdflkjasdfkl;jsdfkljasdflkjasdfkljasdflkjasdflasjkdflksajdfkljjjjjjjjjjjjjjjjlksdjflaskdjflksdjfklsadjflskdjflsdkfjlasdkfjasldkfjsaldkfjasldkfjsadlfkjsadlkfjasdlfkjsdlfkmnsd;vlsufdjlksdfjsdlfk;uasiofjuwermjnasdujsdklfjmsadoifuwsrkl;sdjfasdkojasdmfnsakdljflskadjflaskdjfklasdfjlksjdflksjdfklsajdfaksdjfklsadjflk;sdjfklsadjfklasdjfklsdjflksjdfklsdjfioweurklwajflskdsndksfbl;j df askldfjlsad fasiodfwelkrjweioruskldfjaskldjfiosdfugslakmdfklsfbjskalfdgujasdfglsdkfjsaldfkjsaldk;fjasldkjfasldkjfasl;dkfjs;dlfkjasl;dkfjsdlkfjklsdjflksdjflk;asjdfl;kasjdflksjdflkasdjflakjsdflkasjdflk;jsadflkjasdflkjsdf/nPlease click on the agree button to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="calculate">CALCULATE</string>
    <string name="enter_bmi">Enter bmi</string>
    <string name="enter_pulse">Enter pulse</string>
    <string name="enter_pulse_rate">Enter Pulse Rate</string>
    <string name="enter_blood_pressure">Enter Blood Pressure</string>
    <string name="enter_blood_sugar_level">Enter Blood Sugar Level</string>
    <string name="enter_cholesterol_level">Enter Cholesterol Level</string>
    <string name="enter_sodium_level">Enter Sodium Level</string>
    <string name="enter_respiratory_rate">Enter Respiratory rate</string>
    <string name="proceed_to_health_index_calculator">Proceed to Health Index Calculator</string>
    <string name="enter_the_age">Enter the Age</string>
    <string name="enter_systolic_blood_pressure">Enter Systolic blood pressure</string>
    <string name="enter_systolic_bp">Enter systolic BP</string>
    <string name="enter_diastolic_bp">Enter diastolic BP</string>
    <string name="health_History">Assess Health</string>
    <string name="health_index_button">Health Index</string>
    <string name="version_1_0">Version : 1.0</string>
    <string name="note">**Note : The Health Index percentage generated is totally based upon the data entered by the user . Users are adviced not to take it as the final verdict of their health\'s status, consulting professionals is always recommended.</string>
    <string name="suraj_kumar2020_vitstudent_ac_in">Suraj.kumar2020@vitstudent.ac.in</string>
    <string name="health_index">Health Index</string>
    <string name="air_quality_index">Air Quality Index</string>
    <string name="covid_19_dashboard">Covid 19 Dashboard</string>
    <string name="enter_calcium_level">enter_calcium_level</string>
    <string name="go_to_our_website">Go to our website</string>
    <string name="tabsimage">tabsimage</string>
    <string name="title_activity_health_history">health_history</string>
    <string name="tab_text_1">Body Temp</string>
    <string name="tab_text_2">Pulse rate</string>
    <string name="tab_text_3">BP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register2">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="todo">todo</string>
    <string name="okay">Okay</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Open">Open</string>
    <string name="menu_Close">Close</string>

    <string name="text_with_paragraphs">
        The App provides a wellness score calculation based on various health-related parameters and data input by the user.\n
        The wellness score is provided for informational purposes only and should not be considered as professional medical advice.\n\n
        The Wellness Score will be based on following parameters:\n\n
        1. Body Mass Index(BMI):\n
         (a) less than 18.5 then score = 7.0\n
         (b) within 18.50 and 25 then score = 10\n
         (c) within 25 and 30 then score = 7\n
         (d) within 30 and 40 then score = 5\n
         (e) more than 40 then score = 4\n\n

       2. Pulse Rate:\n
        (a) Within 60 and 100 then score = 10.0\n
        (b) less than 60 then score = normalised\n
        (c) more than 100 then score = normalised\n\n

       3. Sugar Level:\n
        (a) Within 70 and 100 then score = 10.0\n
        (b) less than 70 then score = 5.0\n
        (c) within 100 and 125 then score = 8.0\n\n

       4. Cholesterol level\n
        (a) age less than or equal to 19 and level less than 170 then score = 10.0\n
        (b) age less than or equal to 19 and level > 170 then score = normalised\n
        (c) age > 19 and level within 125 and 200 then score = 10.0\n
        (d) age > 19 and level less than 125 then score = normalised\n
        (e) age > 19 and level more than 200 then score = normalised\n\n

    </string>
    <string name="go_home">Go Home</string>

</resources>